--- a/android/build.gradle
+++ b/android/build.gradle
@@ -14,6 +14,14 @@ android {
 
         instrumentTest.setRoot('tests')
     }
+
+    buildTypes {
+        release {
+            zipAlignEnabled true
+            minifyEnabled true
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-project.txt'
+        }
+    }
 }
 // called every time gradle gets executed, takes the native dependencies of
 // the natives configuration, and extracts them to the proper libs/ folders
